<resources>
    <string name="app_name">LoginTest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome</string>
    <string name="register">Open new account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="send">Send</string>
    <string name="restart_password">Restart password</string>
    <string name="email_error">Email invalid</string>
    <string name="not_empty">Not empty</string>
    <string name="password_do_not_match">Passwords do not match</string>
</resources>
